@@ -1,3 +1,8 @@
+2002-05-08  Jody Goldberg <jody@gnome.org>
+
+	* main.c (cb_dialog_response) : new.
+	(setup_dialog) : support help.
+
 2002-04-27  Seth Nickell  <snickell@stanford.edu>
 
 	* font-properties.desktop.in:
